--- a/index.html
+++ b/index.html
@@ -1,101 +1,103 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="bootstrap-4.5.3-dist/css/bootstrap.css">
-    <title>Document</title>
-</head>
-<body>
-    <div class="container row">
-        <div class="col-3">
-            <img src="" alt="">
-            <h2>A Title for this Card <br> on Two Lines</h2>
-            <p>Lorem ipsum dolor sit amet consectetur 
-                adipisicing elit. Porro ad, atque illum 
-                necessitatibus veritatis molestias quas 
-                dicta debitis explicabo saepe eaque quae quos. 
-                Nisi repellat, mollitia voluptas odit ad nulla!
-            </p>
-            <button type="button" class="btn btn-primary">BUTTON</button>
+  <head>
+    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  </head>
+  <body>
+      <div class="container mt-4 ">
+          <div class="row">
+              <div class="col-sm-12 col-md-6 col-lg-3">               
+                <div class="card text-center mb-4">
+                    <img src="icons/company1.png" style="width: 100px" class="card-img-top mx-auto pt-4" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title <br> on 2 lines</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary ">Go somewhere</a>
+                    </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-3">
+                <div class="card text-center mb-4">
+                    <img src="icons/folder2.png" style="max-width: 100px" class="card-img-top mx-auto pt-4" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title <br> on 2 lines</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-3">
+                <div class="card text-center mb-4">
+                    <img src="icons/clipboards3.png" style="max-width: 100px" class="card-img-top mx-auto pt-4" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title <br> on 2 lines</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-3">
+                <div class="card text-center mb-4">
+                    <img src="icons/pay4.png" style="max-width: 100px" class="card-img-top mx-auto pt-4" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title <br> on 2 lines</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-3">
+                <div class="card text-center mb-4">
+                    <img src="icons/money-bag5.png" style="max-width: 100px" class="card-img-top mx-auto pt-4" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title <br> on 2 lines</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-3">
+                <div class="card text-center mb-4">
+                    <img src="icons/life-preserver6.png" style="max-width: 100px" class="card-img-top mx-auto pt-4" alt="...";>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title <br> on 2 lines</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-3">
+                <div class="card text-center mb-4">
+                    <img src="icons/laptop7.png" style="max-width: 100px" class="card-img-top mx-auto pt-4" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title <br> on 2 lines</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-3">
+                <div class="card text-center mb-4">
+                    <img src="icons/airplane8.png" style="max-width: 100px" class="card-img-top mx-auto pt-4" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title <br> on 2 lines</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+              </div>
+          </div>
         </div>
-        <div class="col-3">
-            <img src="" alt="">
-            <h2>A Title for this Card <br> on Two Lines</h2>
-            <p>Lorem ipsum dolor sit amet consectetur 
-                adipisicing elit. Porro ad, atque illum 
-                necessitatibus veritatis molestias quas 
-                dicta debitis explicabo saepe eaque quae quos. 
-                Nisi repellat, mollitia voluptas odit ad nulla!
-            </p>
-            <button type="button" class="btn btn-primary">BUTTON</button>
-        </div>
-        <div class="col-3">
-            <img src="" alt="">
-            <h2>A Title for this Card <br> on Two Lines</h2>
-            <p>Lorem ipsum dolor sit amet consectetur 
-                adipisicing elit. Porro ad, atque illum 
-                necessitatibus veritatis molestias quas 
-                dicta debitis explicabo saepe eaque quae quos. 
-                Nisi repellat, mollitia voluptas odit ad nulla!
-            </p>
-            <button type="button" class="btn btn-primary">BUTTON</button>
-        </div>
-        <div class="col-3">
-            <img src="" alt="">
-            <h2>A Title for this Card <br> on Two Lines</h2>
-            <p>Lorem ipsum dolor sit amet consectetur 
-                adipisicing elit. Porro ad, atque illum 
-                necessitatibus veritatis molestias quas 
-                dicta debitis explicabo saepe eaque quae quos. 
-                Nisi repellat, mollitia voluptas odit ad nulla!
-            </p>
-            <button type="button" class="btn btn-primary">BUTTON</button>
-        </div>
-        <div class="col-3">
-            <img src="" alt="">
-            <h2>A Title for this Card <br> on Two Lines</h2>
-            <p>Lorem ipsum dolor sit amet consectetur 
-                adipisicing elit. Porro ad, atque illum 
-                necessitatibus veritatis molestias quas 
-                dicta debitis explicabo saepe eaque quae quos. 
-                Nisi repellat, mollitia voluptas odit ad nulla!
-            </p>
-            <button type="button" class="btn btn-primary">BUTTON</button>
-        </div>
-        <div class="col-3">
-            <img src="" alt="">
-            <h2>A Title for this Card <br> on Two Lines</h2>
-            <p>Lorem ipsum dolor sit amet consectetur 
-                adipisicing elit. Porro ad, atque illum 
-                necessitatibus veritatis molestias quas 
-                dicta debitis explicabo saepe eaque quae quos. 
-                Nisi repellat, mollitia voluptas odit ad nulla!
-            </p>
-            <button type="button" class="btn btn-primary">BUTTON</button>
-        </div>
-        <div class="col-3">
-            <img src="" alt="">
-            <h2>A Title for this Card <br> on Two Lines</h2>
-            <p>Lorem ipsum dolor sit amet consectetur 
-                adipisicing elit. Porro ad, atque illum 
-                necessitatibus veritatis molestias quas 
-                dicta debitis explicabo saepe eaque quae quos. 
-                Nisi repellat, mollitia voluptas odit ad nulla!
-            </p>
-            <button type="button" class="btn btn-primary">BUTTON</button>
-        </div>
-        <div class="col-3">
-            <img src="" alt="">
-            <h2>A Title for this Card <br> on Two Lines</h2>
-            <p>Lorem ipsum dolor sit amet consectetur 
-                adipisicing elit. Porro ad, atque illum 
-                necessitatibus veritatis molestias quas 
-                dicta debitis explicabo saepe eaque quae quos. 
-                Nisi repellat, mollitia voluptas odit ad nulla!
-            </p>
-            <button type="button" class="btn btn-primary">BUTTON</button>
+      
+            </div>
         </div>
     </div>
-</body>
+    
+  </body>
 </html>
