--- a/index.html
+++ b/index.html
@@ -11,13 +11,30 @@
   </head>
   <body>
       <div class="container mt-4 ">
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+          
+          <div class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a href="" class="nav-link">Gettin' Rich</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Gettin' Smart</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Surprise Me</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
           <div class="row">
               <div class="col-sm-12 col-md-6 col-lg-3">               
                 <div class="card text-center mb-4">
                     <img src="icons/company1.png" style="width: 100px" class="card-img-top mx-auto pt-4" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title <br> on 2 lines</h5>
+                        <h5 class="card-title">In our offices <br> we are connected</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <hr width="50%">
                         <a href="#" class="btn btn-primary ">Go somewhere</a>
                     </div>
                 </div>
@@ -28,6 +45,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Card title <br> on 2 lines</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <hr width="50%">
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
@@ -36,8 +54,9 @@
                 <div class="card text-center mb-4">
                     <img src="icons/clipboards3.png" style="max-width: 100px" class="card-img-top mx-auto pt-4" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title <br> on 2 lines</h5>
+                        <h5 class="card-title">Card title <br> on 2 lines</h5>                        
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <hr width="50%">
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
@@ -48,6 +67,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Card title <br> on 2 lines</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <hr width="50%">
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
@@ -58,6 +78,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Card title <br> on 2 lines</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <hr width="50%">
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
@@ -68,6 +89,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Card title <br> on 2 lines</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <hr width="50%">
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
@@ -78,6 +100,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Card title <br> on 2 lines</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <hr width="50%">
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
@@ -88,6 +111,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Card title <br> on 2 lines</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <hr width="50%">
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
