--- a/index.html
+++ b/index.html
@@ -10,26 +10,29 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   </head>
   <body>
-      <div class="container mt-4 ">
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
-          
-          <div class="collapse navbar-collapse">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a href="" class="nav-link">Gettin' Rich</a>
-              </li>
-              <li class="nav-item">
-                <a href="" class="nav-link">Gettin' Smart</a>
-              </li>
-              <li class="nav-item">
-                <a href="" class="nav-link">Surprise Me</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-          <div class="row">
+      <div class="container d-flex mt-4 ">
+          <nav class="navbar navbar-light bg-light mb-3 p-5 d-flex align-items-start d-sm-none d-md-block">
+                                                                                <!--hiding navbar small screens--> 
+            <div class="">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a href="" class="nav-link">What Are You Up To?</a>
+                </li>
+                <li class="nav-item">
+                  <a href="" class="nav-link">Gettin' Rich</a>
+                </li>
+                <li class="nav-item">
+                  <a href="" class="nav-link">Gettin' Smart</a>
+                </li>
+                <li class="nav-item">
+                  <a href="" class="nav-link">Surprise Me</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+          <div class="row mx-auto" style="width: auto">
               <div class="col-sm-12 col-md-6 col-lg-3">               
-                <div class="card text-center mb-4">
+                <div class="card text-center mb-4 bg-info">
                     <img src="icons/company1.png" style="width: 100px" class="card-img-top mx-auto pt-4" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">In our offices <br> we are connected</h5>
@@ -40,7 +43,7 @@
                 </div>
               </div>
               <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="card text-center mb-4">
+                <div class="card text-center mb-4 bg-info">
                     <img src="icons/folder2.png" style="max-width: 100px" class="card-img-top mx-auto pt-4" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title <br> on 2 lines</h5>
@@ -51,7 +54,7 @@
                 </div>
               </div>
               <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="card text-center mb-4">
+                <div class="card text-center mb-4 bg-info">
                     <img src="icons/clipboards3.png" style="max-width: 100px" class="card-img-top mx-auto pt-4" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title <br> on 2 lines</h5>                        
@@ -62,7 +65,7 @@
                 </div>
               </div>
               <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="card text-center mb-4">
+                <div class="card text-center mb-4 bg-info">
                     <img src="icons/pay4.png" style="max-width: 100px" class="card-img-top mx-auto pt-4" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title <br> on 2 lines</h5>
@@ -73,7 +76,7 @@
                 </div>
               </div>
               <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="card text-center mb-4">
+                <div class="card text-center mb-4 bg-info">
                     <img src="icons/money-bag5.png" style="max-width: 100px" class="card-img-top mx-auto pt-4" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title <br> on 2 lines</h5>
@@ -84,7 +87,7 @@
                 </div>
               </div>
               <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="card text-center mb-4">
+                <div class="card text-center mb-4 bg-info">
                     <img src="icons/life-preserver6.png" style="max-width: 100px" class="card-img-top mx-auto pt-4" alt="...";>
                     <div class="card-body">
                         <h5 class="card-title">Card title <br> on 2 lines</h5>
@@ -95,7 +98,7 @@
                 </div>
               </div>
               <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="card text-center mb-4">
+                <div class="card text-center mb-4 bg-info">
                     <img src="icons/laptop7.png" style="max-width: 100px" class="card-img-top mx-auto pt-4" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title <br> on 2 lines</h5>
@@ -106,7 +109,7 @@
                 </div>
               </div>
               <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="card text-center mb-4">
+                <div class="card text-center mb-4 bg-info">
                     <img src="icons/airplane8.png" style="max-width: 100px" class="card-img-top mx-auto pt-4" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title <br> on 2 lines</h5>
